manifests/740-adm-pgadmin-ingress.yaml
---
# File: 740-adm-pgadmin-ingress.yaml
# Purpose: Define Ingress for pgAdmin
# Usage:
# kubectl apply -f 740-adm-pgadmin-ingress.yaml
# REMOVE: kubectl delete -f 740-adm-pgadmin-ingress.yaml
# CHECK that it is listed: kubectl get ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  
  rules:
  - http:
      paths:
      - path: /urbadm/pgadmin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: pgadmin-pgadmin4
            port:
              number: 80
